Added back-end for speed graph, which is in json and cotains date and vssAvg.

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,14 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+
+<!--        JSON                   -->
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>20160810</version>
+            </dependency>
     </dependencies>
 
     <build>
