--- a/pom.xml
+++ b/pom.xml
@@ -68,9 +68,6 @@
             <artifactId>spring-security-oauth2</artifactId>
             <version>2.3.5.RELEASE</version>
         </dependency>
-
-
-        <!--        JSON                   -->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
@@ -85,6 +82,11 @@
             <groupId>org.jdom</groupId>
             <artifactId>jdom2</artifactId>
             <version>2.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.3.1</version>
         </dependency>
     </dependencies>
 
