--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>si.feri.pkm</groupId>
     <artifactId>optitech</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>OptiTech</name>
     <description>Spring Boot project for OptiTech</description>
 
@@ -19,6 +20,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-activemq</artifactId>
@@ -96,6 +102,7 @@
     </dependencies>
 
     <build>
+        <finalName>OptiTech</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
